# startalk

./: .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml
.claude/skills/: block-aesthetic.md
apps/macos/: index.html  package.json
apps/macos/src/: App.css  App.tsx  db.ts  hotkey.ts  injector.ts  main.tsx  recorder.ts  sounds.ts  store.ts  tray.ts  windowLabel.ts
apps/macos/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/macos/src-tauri/capabilities/: default.json
apps/macos/src-tauri/icons/: icon.icns
apps/macos/src-tauri/src/: commands.rs  config.rs  db.rs  hotkey.rs  injector.rs  lib.rs  main.rs  pipeline.rs  popover.rs  recording.rs  transcription.rs  translate.rs  tray.rs
apps/macos/src/components/: History.tsx  HotkeyRecorder.tsx  Popover.tsx  Settings.tsx  StatusPill.tsx  Vocabulary.tsx  VocabularyEditor.tsx
apps/macos/src/hooks/: useBackendEvents.ts  useRecordingFlow.ts
apps/macos/src/utils/: format.ts
