[package]
name = "startalk"
version = "0.2.0"
description = "Voice-to-text transcription utility"
authors = ["you"]
edition = "2021"

[lib]
name = "startalk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-graphics = "0.25"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
